Fixed accordion collapse bug

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -6,7 +6,17 @@
     height: 100%;
     padding-top: 97px;
 }
-
+h4 {
+  display: inline-block;
+}
+.item-icons {
+  text-align: right;
+  padding-left: 10px;
+  float: right;
+}
+#trash {
+  margin-left: 10px;
+}
 .swiper-slide {
     overflow-y: scroll;
 }
